# hse-bignumber-lib

./: .gitignore  BigNumber.cpp  BigNumber.h  CMakeLists.txt  README.md  build-cmake.bash  library.h  main.cpp  test.bash
Bignumber_lib/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  library.cpp  library.h
Bignumber_lib/BigNumber/: compare.cpp  countPi.cpp
Bignumber_lib/BigNumber/arithmetics/: add.cpp  div.cpp  mul.cpp  sub.cpp
Bignumber_lib/utils/: completeWithZeros.cpp  strPowerOfTen.cpp  trim.cpp
Google_tests/: BigNumberTest.cpp  CMakeLists.txt  ConverterTests.cpp  arithmeticTests.cpp  assignmentTests.cpp  comparisonTests.cpp  constructorTests.cpp  otherTests.cpp
